--- a/app/src/main/res/layout-sw480dp/activity_main.xml
+++ b/app/src/main/res/layout-sw480dp/activity_main.xml
@@ -1,21 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                                     xmlns:app="http://schemas.android.com/apk/res-auto"
-                                                     xmlns:tools="http://schemas.android.com/tools"
-                                                     android:layout_width="match_parent"
-                                                     android:layout_height="match_parent"
-                                                     android:background="@drawable/background_tile"
-                                                     tools:context="com.cvv.fanstaticapps.randomticker.activities.MainActivity">
+<android.support.design.widget.CoordinatorLayout
+	xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:app="http://schemas.android.com/apk/res-auto"
+	xmlns:tools="http://schemas.android.com/tools"
+	android:layout_width="match_parent"
+	android:layout_height="match_parent"
+	android:background="@drawable/background_tile"
+	tools:context="com.cvv.fanstaticapps.randomticker.activities.MainActivity">
 
 	<include layout="@layout/app_bar"/>
 
 
-	<androidx.core.widget.NestedScrollView
+	<android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-		<androidx.cardview.widget.CardView
+		<android.support.v7.widget.CardView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center">
@@ -29,7 +30,7 @@
                 <include layout="@layout/content_main" />
 
             </LinearLayout>
-		</androidx.cardview.widget.CardView>
-	</androidx.core.widget.NestedScrollView>
+		</android.support.v7.widget.CardView>
+	</android.support.v4.widget.NestedScrollView>
 
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+</android.support.design.widget.CoordinatorLayout>
