--- a/app/src/main/res/layout/app_bar.xml
+++ b/app/src/main/res/layout/app_bar.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.appbar.AppBarLayout
+<android.support.design.widget.AppBarLayout
 	xmlns:app="http://schemas.android.com/apk/res-auto"
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:tools="http://schemas.android.com/tools"
@@ -8,13 +8,13 @@
 	android:theme="@style/AppTheme.AppBarOverlay"
 	tools:showIn="@layout/activity_main">
 
-	<androidx.appcompat.widget.Toolbar
+	<android.support.v7.widget.Toolbar
 		android:id="@+id/toolbar"
 		android:layout_width="match_parent"
 		android:layout_height="?attr/actionBarSize"
 		android:background="?attr/colorPrimary"
 		app:title="@string/app_name"
 		app:popupTheme="@style/AppTheme.PopupOverlay"/>
-</com.google.android.material.appbar.AppBarLayout>
+</android.support.design.widget.AppBarLayout>
 
     
