--- a/app/src/main/res/values/constants.xml
+++ b/app/src/main/res/values/constants.xml
@@ -2,4 +2,5 @@
     <string name="app_name" translatable="false">Random Ticker</string>
     <string name="license" translatable="false">Open Source Licenses</string>
     <string name="pref_ringtone" translatable="false">pref_ringtone</string>
+    <string name="pref_license" translatable="false">pref_license</string>
 </resources>
