--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -1,15 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <merge
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    tools:showIn="@layout/activity_main">
+	xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:tools="http://schemas.android.com/tools"
+	tools:showIn="@layout/activity_main">
 
-    <include layout="@layout/content_minimum_value"/>
+	<TextView
+		style="@style/AppTheme.Interval.Description"
+		android:text="@string/random_timer_introduction"/>
 
-    <include layout="@layout/content_maximum_value"/>
+	<include layout="@layout/content_minimum_value"/>
 
-    <Button
-        android:id="@+id/start"
-        style="@style/AppTheme.Button"
-        android:text="@string/start_button"/>
+	<include
+		layout="@layout/content_maximum_value"
+		android:layout_marginTop="@dimen/contentPadding"
+		android:layout_height="wrap_content"
+		android:layout_width="match_parent"/>
+
+	<Button
+		android:id="@+id/start"
+		style="@style/AppTheme.Button"
+		android:text="@string/start_button"/>
 </merge>
