--- a/app/src/main/res/layout/content_maximum_value.xml
+++ b/app/src/main/res/layout/content_maximum_value.xml
@@ -1,34 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:tools="http://schemas.android.com/tools"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              android:orientation="vertical"
-              tools:showIn="@layout/content_main">
+<android.support.v7.widget.CardView
+	xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:app="http://schemas.android.com/apk/res-auto"
+	xmlns:tools="http://schemas.android.com/tools"
+	android:layout_width="match_parent"
+	android:layout_height="wrap_content">
 
-    <TextView
-        android:text="@string/maximum_time"
-        style="@style/AppTheme.Interval.Description"/>
+	<android.support.constraint.ConstraintLayout
+		android:padding="@dimen/contentPadding"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent">
 
-    <TextView
-	    android:id="@+id/maxValue"
-	    style="@style/AppTheme.Interval.TimeDisplay"
-	    tools:text="10m10s"/>
+		<TextView
+			android:id="@+id/textView"
+			style="@style/AppTheme.Interval.Label"
+			android:text="@string/to"/>
 
-    <SeekBar
-	    android:id="@+id/maxMin"
-	    style="@style/AppTheme.Interval.SeekBar"/>
+		<android.support.design.widget.TextInputLayout
+			android:id="@+id/textInputLayout2"
+			style="@style/AppTheme.Interval.EditTextContainer"
+			android:layout_width="0dp"
+			android:layout_height="0dp"
+			android:layout_marginBottom="8dp"
+			android:layout_marginEnd="8dp"
+			android:layout_marginStart="8dp"
+			android:layout_marginTop="8dp"
+			app:layout_constraintBottom_toBottomOf="parent"
+			app:layout_constraintEnd_toStartOf="@+id/textInputLayout"
+			app:layout_constraintHorizontal_bias="0.5"
+			app:layout_constraintHorizontal_chainStyle="spread"
+			app:layout_constraintStart_toStartOf="parent"
+			app:layout_constraintTop_toBottomOf="@+id/textView">
 
-    <TextView
-        style="@style/AppTheme.Interval.Unit"
-        android:text="@string/minutes"/>
+			<android.support.design.widget.TextInputEditText
+				android:id="@+id/maxMin"
+				style="@style/AppTheme.Interval.EditText"
+				android:hint="@string/minutes"
+				tools:text="399"/>
+		</android.support.design.widget.TextInputLayout>
 
-    <SeekBar
-	    android:id="@+id/maxSec"
-	    style="@style/AppTheme.Interval.SeekBar"/>
+		<android.support.design.widget.TextInputLayout
+			android:id="@+id/textInputLayout"
+			style="@style/AppTheme.Interval.EditTextContainer"
+			android:layout_width="0dp"
+			android:layout_height="wrap_content"
+			android:layout_marginBottom="8dp"
+			android:layout_marginEnd="8dp"
+			android:layout_marginTop="8dp"
+			app:layout_constraintBottom_toBottomOf="parent"
+			app:layout_constraintEnd_toEndOf="parent"
+			app:layout_constraintHorizontal_bias="0.5"
+			app:layout_constraintHorizontal_chainStyle="spread"
+			app:layout_constraintStart_toEndOf="@+id/textInputLayout2"
+			app:layout_constraintTop_toBottomOf="@+id/textView">
 
-    <TextView
-        style="@style/AppTheme.Interval.Unit"
-        android:text="@string/seconds"/>
+			<android.support.design.widget.TextInputEditText
+				android:id="@+id/maxSec"
+				style="@style/AppTheme.Interval.EditText"
+				android:hint="@string/seconds"
+				tools:text="1"/>
+		</android.support.design.widget.TextInputLayout>
 
-</LinearLayout>
+	</android.support.constraint.ConstraintLayout>
+</android.support.v7.widget.CardView>
