--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,11 +2,9 @@
 <resources>
     <dimen name="activityPadding">16dp</dimen>
     <dimen name="sectionMargin">36dp</dimen>
-    <dimen name="titleMargin">8dp</dimen>
+	<dimen name="titleMargin">16dp</dimen>
     <dimen name="widgetMargin">24dp</dimen>
     <dimen name="dismissButtonMinSize">80dp</dimen>
-    <dimen name="progressbarMaxHeight">8dp</dimen>
-    <dimen name="thumbHeight">18dp</dimen>
-    <dimen name="progressCornerRadius">20dp</dimen>
-    <dimen name="minSeekbarWidth">200dp</dimen>
+	<dimen name="contentPadding">16dp</dimen>
+	<dimen name="editTextPadding">16dp</dimen>
 </resources>
