--- a/app/src/main/res/layout/content_maximum_value.xml
+++ b/app/src/main/res/layout/content_maximum_value.xml
@@ -56,6 +56,7 @@
 
 			<android.support.design.widget.TextInputEditText
 				android:id="@+id/maxSec"
+				android:imeOptions="actionDone"
 				style="@style/AppTheme.Interval.EditText"
 				android:hint="@string/seconds"
 				tools:text="1"/>
