--- a/app/src/main/res/layout/content_maximum_value.xml
+++ b/app/src/main/res/layout/content_maximum_value.xml
@@ -35,8 +35,9 @@
 			<android.support.design.widget.TextInputEditText
 				android:id="@+id/maxMin"
 				style="@style/AppTheme.Interval.EditText"
+				android:maxLength="3"
 				android:hint="@string/minutes"
-				tools:text="399"/>
+				tools:text="3929"/>
 		</android.support.design.widget.TextInputLayout>
 
 		<android.support.design.widget.TextInputLayout
@@ -58,6 +59,7 @@
 				android:id="@+id/maxSec"
 				android:imeOptions="actionDone"
 				style="@style/AppTheme.Interval.EditText"
+				android:maxLength="2"
 				android:hint="@string/seconds"
 				tools:text="1"/>
 		</android.support.design.widget.TextInputLayout>
