--- a/app/src/main/res/values/constants.xml
+++ b/app/src/main/res/values/constants.xml
@@ -1,6 +1,7 @@
 <resources>
-    <string name="app_name" translatable="false">Random Ticker</string>
-    <string name="license" translatable="false">Open Source Licenses</string>
-    <string name="pref_ringtone" translatable="false">pref_ringtone</string>
-    <string name="pref_license" translatable="false">pref_license</string>
+	<string name="app_name" translatable="false">Random Ticker</string>
+	<string name="license" translatable="false">Open Source Licenses</string>
+	<string name="pref_ringtone" translatable="false">pref_ringtone</string>
+	<string name="pref_license" translatable="false">pref_license</string>
+	<string name="pref_show_notification" translatable="false">pref_show_notification</string>
 </resources>
