Better styling for all devices

--- a/app/src/main/res/layout-land/content_main.xml
+++ b/app/src/main/res/layout-land/content_main.xml
@@ -5,8 +5,8 @@
 	tools:showIn="@layout/activity_main">
 
 	<TextView
-		style="@style/AppTheme.Interval.Description"
-		android:text="@string/random_timer_introduction"/>
+			style="@style/AppTheme.Description"
+			android:text="@string/random_timer_introduction"/>
 
 	<LinearLayout
 		android:layout_width="match_parent"
