--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="activityPadding">16dp</dimen>
+	<dimen name="activityPaddingHorizontal">16dp</dimen>
+	<dimen name="activityPaddingVertical">16dp</dimen>
     <dimen name="sectionMargin">36dp</dimen>
 	<dimen name="titleMargin">16dp</dimen>
     <dimen name="widgetMargin">24dp</dimen>
     <dimen name="dismissButtonMinSize">80dp</dimen>
 	<dimen name="contentPadding">16dp</dimen>
 	<dimen name="editTextPadding">16dp</dimen>
+	<dimen name="editTextMinWidth">100dp</dimen>
 </resources>
