--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,42 +13,59 @@
 		<item name="android:layout_marginTop">@dimen/sectionMargin</item>
 	</style>
 
-	<style name="AppTheme.Interval">
+	<style name="AppTheme.EditTextContainer">
 		<item name="android:layout_height">wrap_content</item>
 		<item name="android:layout_width">wrap_content</item>
-	</style>
-
-	<style name="AppTheme.Interval.EditTextContainer">
 		<item name="android:paddingStart">@dimen/editTextPadding</item>
 		<item name="android:paddingEnd">@dimen/editTextPadding</item>
 		<item name="android:gravity">center_horizontal</item>
+		<item name="hintTextAppearance">@style/AppTheme.HintTextAppearance</item>
 	</style>
 
-	<style name="AppTheme.Interval.EditText">
+	<style name="AppTheme.EditText.Base">
+		<item name="android:layout_height">wrap_content</item>
+		<item name="android:layout_width">wrap_content</item>
 		<item name="android:fontFamily">monospace</item>
 		<item name="android:textAppearance">@style/Base.TextAppearance.AppCompat.Display2</item>
 		<item name="android:digits">0123456789"</item>
 		<item name="android:selectAllOnFocus">true</item>
-		<item name="android:minWidth">100dp</item>
+		<item name="android:minWidth">@dimen/editTextMinWidth</item>
 		<item name="android:inputType">number</item>
 		<item name="android:imeOptions">actionNext</item>
 	</style>
 
-	<style name="AppTheme.Interval.Label">
+	<style name="AppTheme.Label.Base">
+		<item name="android:layout_height">wrap_content</item>
+		<item name="android:layout_width">wrap_content</item>
 		<item name="android:layout_marginBottom">@dimen/titleMargin</item>
 		<item name="android:textStyle">bold</item>
 		<item name="android:textAllCaps">true</item>
-		<item name="android:layout_marginStart">@dimen/activityPadding</item>
+		<item name="android:layout_marginStart">@dimen/activityPaddingHorizontal</item>
 		<item name="android:textAppearance">@style/Base.TextAppearance.AppCompat.Medium</item>
 	</style>
 
-	<style name="AppTheme.Interval.Description">
-		<item name="android:textAppearance">@style/Base.TextAppearance.AppCompat.Medium</item>
+	<style name="AppTheme.Description.Base">
+		<item name="android:layout_height">wrap_content</item>
+		<item name="android:layout_width">wrap_content</item>
+		<item name="android:textAppearance">@style/Base.TextAppearance.AppCompat.Large</item>
 		<item name="android:layout_marginBottom">@dimen/titleMargin</item>
 	</style>
+
+	<style name="AppTheme.Label" parent="AppTheme.Label.Base"/>
+
+	<style name="AppTheme.Description" parent="AppTheme.Description.Base"/>
+
+	<style name="AppTheme.EditText" parent="AppTheme.EditText.Base"/>
+
+	<style name="AppTheme.HintTextAppearance" parent="TextAppearance.Design.Hint"/>
 
 	<style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar"/>
 
 	<style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light"/>
+
+	<style name="AppTheme.RootContainer">
+		<item name="android:layout_width">match_parent</item>
+		<item name="android:layout_height">match_parent</item>
+	</style>
 
 </resources>
