Styles refactoring to resolve circular dependencies

--- a/app/src/main/res/values-sw480dp/styles.xml
+++ b/app/src/main/res/values-sw480dp/styles.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-	<style name="AppTheme.EditText" parent="AppTheme.EditText.Base">
+	<style name="AppTheme.EditText" parent="AppTheme.Base.EditText">
 		<item name="android:textAppearance">@style/Base.TextAppearance.AppCompat.Display4</item>
 	</style>
 
-	<style name="AppTheme.Label" parent="AppTheme.Label.Base">
+	<style name="AppTheme.Label" parent="AppTheme.Base.Label">
 		<item name="android:textAppearance">@style/Base.TextAppearance.AppCompat.Large</item>
 	</style>
 
-	<style name="AppTheme.Description" parent="AppTheme.Description.Base">
+	<style name="AppTheme.Description" parent="AppTheme.Base.Description">
 		<item name="android:textAppearance">@style/Base.TextAppearance.AppCompat.Large</item>
 	</style>
 
