--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -22,7 +22,9 @@
 		<item name="hintTextAppearance">@style/AppTheme.HintTextAppearance</item>
 	</style>
 
-	<style name="AppTheme.EditText.Base">
+	<style name="AppTheme.Base"/>
+
+	<style name="AppTheme.Base.EditText">
 		<item name="android:layout_height">wrap_content</item>
 		<item name="android:layout_width">wrap_content</item>
 		<item name="android:fontFamily">monospace</item>
@@ -34,7 +36,7 @@
 		<item name="android:imeOptions">actionNext</item>
 	</style>
 
-	<style name="AppTheme.Label.Base">
+	<style name="AppTheme.Base.Label">
 		<item name="android:layout_height">wrap_content</item>
 		<item name="android:layout_width">wrap_content</item>
 		<item name="android:layout_marginBottom">@dimen/titleMargin</item>
@@ -44,18 +46,19 @@
 		<item name="android:textAppearance">@style/Base.TextAppearance.AppCompat.Medium</item>
 	</style>
 
-	<style name="AppTheme.Description.Base">
+	<style name="AppTheme.Base.Description">
 		<item name="android:layout_height">wrap_content</item>
 		<item name="android:layout_width">wrap_content</item>
 		<item name="android:textAppearance">@style/Base.TextAppearance.AppCompat.Large</item>
 		<item name="android:layout_marginBottom">@dimen/titleMargin</item>
 	</style>
 
-	<style name="AppTheme.Label" parent="AppTheme.Label.Base"/>
 
-	<style name="AppTheme.Description" parent="AppTheme.Description.Base"/>
+	<style name="AppTheme.Label" parent="AppTheme.Base.Label"/>
 
-	<style name="AppTheme.EditText" parent="AppTheme.EditText.Base"/>
+	<style name="AppTheme.Description" parent="AppTheme.Base.Description"/>
+
+	<style name="AppTheme.EditText" parent="AppTheme.Base.EditText"/>
 
 	<style name="AppTheme.HintTextAppearance" parent="TextAppearance.Design.Hint"/>
 
