Adds bookmarks as a new feature backed by db

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -71,4 +71,21 @@
 		<item name="android:layout_height">match_parent</item>
 	</style>
 
+	<style name="AppTheme.Bookmark">
+		<item name="android:layout_width">0dp</item>
+		<item name="android:layout_weight">1</item>
+		<item name="android:background">@drawable/bookmark_background</item>
+		<item name="android:layout_height">wrap_content</item>
+		<item name="android:layout_marginStart">8dp</item>
+		<item name="android:padding">4dp</item>
+		<item name="android:gravity">center</item>
+	</style>
+
+	<style name="AppTheme.BookmarksContainer">
+		<item name="android:layout_width">match_parent</item>
+		<item name="android:layout_height">wrap_content</item>
+		<item name="android:layout_marginEnd">8dp</item>
+		<item name="android:layout_marginBottom">@dimen/titleMargin</item>
+	</style>
+
 </resources>
