--- a/app/src/main/res/layout-land/content_main.xml
+++ b/app/src/main/res/layout-land/content_main.xml
@@ -1,36 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
 <merge
-	xmlns:android="http://schemas.android.com/apk/res/android"
-	xmlns:tools="http://schemas.android.com/tools"
-	tools:showIn="@layout/activity_main">
+		xmlns:android="http://schemas.android.com/apk/res/android"
+		xmlns:tools="http://schemas.android.com/tools"
+		tools:showIn="@layout/activity_main">
 
 	<TextView
 			style="@style/AppTheme.Description"
 			android:text="@string/random_timer_introduction"/>
 
 	<LinearLayout
-		android:layout_width="match_parent"
-		android:layout_height="match_parent"
-		android:baselineAligned="false">
+			android:orientation="horizontal"
+			style="@style/AppTheme.BookmarksContainer">
 
 		<include
-			layout="@layout/content_minimum_value"
-			android:layout_width="0dp"
-			android:layout_height="wrap_content"
-			android:layout_weight="1"/>
+				android:layout_height="wrap_content"
+				android:layout_width="0dp"
+				android:layout_weight="1"
+				layout="@layout/content_bookmarks_row1"/>
 
 		<include
-			layout="@layout/content_maximum_value"
-			android:layout_width="0dp"
-			android:layout_height="wrap_content"
-			android:layout_weight="1"/>
+				android:layout_height="wrap_content"
+				android:layout_width="0dp"
+				android:layout_weight="1"
+				layout="@layout/content_bookmarks_row2"/>
+	</LinearLayout>
+
+	<LinearLayout
+			android:layout_width="match_parent"
+			android:layout_height="match_parent"
+			android:baselineAligned="false">
+
+		<include
+				layout="@layout/content_minimum_value"
+				android:layout_width="0dp"
+				android:layout_height="wrap_content"
+				android:layout_weight="1"/>
+
+		<include
+				layout="@layout/content_maximum_value"
+				android:layout_width="0dp"
+				android:layout_height="wrap_content"
+				android:layout_weight="1"/>
 	</LinearLayout>
 
 	<Button
-		android:id="@+id/start"
-		style="@style/AppTheme.Button"
-		android:layout_marginTop="@dimen/contentPadding"
-		android:layout_width="wrap_content"
-		android:layout_gravity="end"
-		android:text="@string/start_button"/>
+			android:id="@+id/start"
+			style="@style/AppTheme.Button"
+			android:layout_marginTop="@dimen/contentPadding"
+			android:layout_width="wrap_content"
+			android:layout_gravity="end"
+			android:text="@string/start_button"/>
 </merge>
