--- a/app/src/main/res/drawable/bookmark_background.xml
+++ b/app/src/main/res/drawable/bookmark_background.xml
@@ -1,16 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-	<item android:state_activated="true">
-		<shape android:shape="rectangle">
-			<stroke android:width="2dp" android:color="@color/colorPrimary"/>
-			<corners android:radius="2dp"/>
-		</shape>
-	</item>
+<ripple
+		xmlns:android="http://schemas.android.com/apk/res/android"
+		android:color="@color/colorAccent">
 	<item>
-		<shape android:shape="rectangle">
-			<stroke android:width="2dp" android:color="@color/colorAccent"/>
-			<corners android:radius="2dp"/>
-		</shape>
-	</item>
+		<selector xmlns:android="http://schemas.android.com/apk/res/android">
+			<item android:state_activated="true">
+				<shape android:shape="rectangle">
+					<stroke
+							android:width="2dp"
+							android:color="@color/colorPrimary"/>
+					<corners android:radius="2dp"/>
+					<solid android:color="@android:color/white"/>
+				</shape>
+			</item>
+			<item>
+				<shape android:shape="rectangle">
+					<solid android:color="@android:color/white"/>
+					<stroke
+							android:width="2dp"
+							android:color="@color/colorAccent"/>
+					<corners android:radius="2dp"/>
+				</shape>
+			</item>
 
-</selector>
+		</selector>
+	</item>
+</ripple>
