--- a/app/src/main/res/layout/content_bookmarks_row2.xml
+++ b/app/src/main/res/layout/content_bookmarks_row2.xml
@@ -7,6 +7,7 @@
 
 	<TextView
 			android:text="@string/bookmark_5"
+			android:layout_marginStart="0dp"
 			android:id="@+id/bookmark5"
 			style="@style/AppTheme.Bookmark"/>
 
