--- a/app/src/main/res/layout/content_maximum_value.xml
+++ b/app/src/main/res/layout/content_maximum_value.xml
@@ -1,22 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView
-	xmlns:android="http://schemas.android.com/apk/res/android"
-	xmlns:app="http://schemas.android.com/apk/res-auto"
-	xmlns:tools="http://schemas.android.com/tools"
-	android:layout_width="match_parent"
-	android:layout_height="wrap_content">
-
-	<android.support.constraint.ConstraintLayout
-		android:padding="@dimen/contentPadding"
+<androidx.cardview.widget.CardView
+		xmlns:android="http://schemas.android.com/apk/res/android"
+		xmlns:app="http://schemas.android.com/apk/res-auto"
+		xmlns:tools="http://schemas.android.com/tools"
 		android:layout_width="match_parent"
-		android:layout_height="match_parent">
+		android:layout_height="wrap_content">
+
+	<androidx.constraintlayout.widget.ConstraintLayout
+			android:padding="@dimen/contentPadding"
+			android:layout_width="match_parent"
+			android:layout_height="match_parent">
 
 		<TextView
 				android:id="@+id/textView"
 				style="@style/AppTheme.Label"
 				android:text="@string/to"/>
 
-		<android.support.design.widget.TextInputLayout
+		<com.google.android.material.textfield.TextInputLayout
 				android:id="@+id/textInputLayout2"
 				style="@style/AppTheme.EditTextContainer"
 				android:layout_width="0dp"
@@ -32,15 +32,15 @@
 				app:layout_constraintStart_toStartOf="parent"
 				app:layout_constraintTop_toBottomOf="@+id/textView">
 
-			<android.support.design.widget.TextInputEditText
+			<com.google.android.material.textfield.TextInputEditText
 					android:id="@+id/maxMin"
 					style="@style/AppTheme.EditText"
 					android:maxLength="3"
 					android:hint="@string/minutes"
 					tools:text="3929"/>
-		</android.support.design.widget.TextInputLayout>
+		</com.google.android.material.textfield.TextInputLayout>
 
-		<android.support.design.widget.TextInputLayout
+		<com.google.android.material.textfield.TextInputLayout
 				android:id="@+id/textInputLayout"
 				style="@style/AppTheme.EditTextContainer"
 				android:layout_width="0dp"
@@ -55,14 +55,14 @@
 				app:layout_constraintStart_toEndOf="@+id/textInputLayout2"
 				app:layout_constraintTop_toBottomOf="@+id/textView">
 
-			<android.support.design.widget.TextInputEditText
+			<com.google.android.material.textfield.TextInputEditText
 					android:id="@+id/maxSec"
 					android:imeOptions="actionDone"
 					style="@style/AppTheme.EditText"
 					android:maxLength="2"
 					android:hint="@string/seconds"
 					tools:text="1"/>
-		</android.support.design.widget.TextInputLayout>
+		</com.google.android.material.textfield.TextInputLayout>
 
-	</android.support.constraint.ConstraintLayout>
-</android.support.v7.widget.CardView>
+	</androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.cardview.widget.CardView>
