--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -8,9 +8,18 @@
 			style="@style/AppTheme.Description"
 			android:text="@string/random_timer_introduction"/>
 
-	<Spinner
-			android:id="@+id/bookmarks"
-			style="@style/AppTheme.BookmarksContainer"/>
+	<LinearLayout
+			android:orientation="vertical"
+			style="@style/AppTheme.BookmarksContainer">
+
+		<include layout="@layout/content_bookmarks_row1"/>
+
+		<include
+				layout="@layout/content_bookmarks_row2"
+				android:layout_height="wrap_content"
+				android:layout_width="match_parent"
+				android:layout_marginTop="16dp"/>
+	</LinearLayout>
 
 	<include layout="@layout/content_minimum_value"/>
 
