--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -78,16 +78,18 @@
 
 	<style name="AppTheme.Bookmark">
 		<item name="android:layout_width">0dp</item>
-		<item name="android:layout_height">wrap_content</item>
 		<item name="android:layout_weight">1</item>
+		<item name="android:elevation">5dp</item>
+		<item name="android:background">@drawable/bookmark_background</item>
+		<item name="android:layout_height">wrap_content</item>
 		<item name="android:layout_marginStart">8dp</item>
-		<item name="android:inputType">textCapWords</item>
+		<item name="android:padding">4dp</item>
+		<item name="android:gravity">center</item>
 	</style>
 
 	<style name="AppTheme.BookmarksContainer">
 		<item name="android:layout_width">match_parent</item>
 		<item name="android:layout_height">wrap_content</item>
-		<item name="android:spinnerMode">dialog</item>
 		<item name="android:layout_marginBottom">@dimen/titleMargin</item>
 	</style>
 
