--- a/base/src/main/res/menu/menu_main_activity.xml
+++ b/base/src/main/res/menu/menu_main_activity.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-      xmlns:app="http://schemas.android.com/apk/res-auto">
-    <item
-        android:id="@+id/settings"
-        android:icon="@drawable/ic_settings"
-        android:title="@string/title_activity_settings"
-        app:showAsAction="ifRoom"/>
+	  xmlns:app="http://schemas.android.com/apk/res-auto">
+	<item
+			android:id="@+id/settings"
+			android:icon="@drawable/ic_settings"
+			android:visible="@bool/show_settings_menu"
+			android:title="@string/title_activity_settings"
+			app:showAsAction="ifRoom"/>
 </menu>
