--- a/sequential-timer/src/main/res/layout/activity_main.xml
+++ b/sequential-timer/src/main/res/layout/activity_main.xml
@@ -7,58 +7,12 @@
 		android:layout_height="match_parent"
 		tools:context=".MainActivity">
 
-	<com.google.android.material.appbar.AppBarLayout
-			android:id="@+id/appbar"
-			android:layout_width="match_parent"
-			android:layout_height="wrap_content">
+	<include layout="@layout/app_bar"/>
 
-		<androidx.appcompat.widget.Toolbar
-				android:id="@+id/toolbar"
-				android:layout_width="match_parent"
-				android:layout_height="?attr/actionBarSize">
-		</androidx.appcompat.widget.Toolbar>
-	</com.google.android.material.appbar.AppBarLayout>
-
-	<androidx.core.widget.NestedScrollView
+	<androidx.recyclerview.widget.RecyclerView
+			android:id="@+id/rvConditions"
+			app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
 			android:layout_width="match_parent"
 			android:layout_height="match_parent"
-			app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
-
-		<LinearLayout
-				android:layout_width="match_parent"
-				android:layout_height="match_parent"
-				android:orientation="vertical"
-				android:padding="16dp">
-
-			<TextView
-					android:layout_width="match_parent"
-					android:layout_height="match_parent"
-					android:fontFamily="monospace"
-					android:text="@string/timer_intro"
-					android:textSize="16sp"/>
-
-			<LinearLayout
-					android:layout_width="match_parent"
-					android:layout_height="wrap_content">
-
-				<Button
-						android:id="@+id/btnAdd"
-						style="@style/AppTheme.Button"
-						android:drawableStart="@drawable/ic_add"
-						android:text="@string/button_add"/>
-
-				<Button
-						android:id="@+id/btnPrimary"
-						style="@style/AppTheme.Button"
-						android:text="@string/button_and"
-						android:visibility="gone"/>
-
-				<Button
-						android:id="@+id/btnSecondary"
-						style="@style/AppTheme.Button"
-						android:text="@string/button_or"
-						android:visibility="gone"/>
-			</LinearLayout>
-		</LinearLayout>
-	</androidx.core.widget.NestedScrollView>
+			android:padding="16dp"/>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
