--- a/sequential-timer/src/main/res/layout/view_minimum_count.xml
+++ b/sequential-timer/src/main/res/layout/view_minimum_count.xml
@@ -1,31 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-
 <LinearLayout
 		xmlns:android="http://schemas.android.com/apk/res/android"
 		xmlns:tools="http://schemas.android.com/tools"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
 		android:gravity="center"
-		tools:showIn="@layout/dialog_condition">
+		android:padding="16dp"
+		tools:showIn="@layout/view_buttons">
 
 	<TextView
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-			android:text="@string/label_exact_after"/>
+			android:text="@string/label_minimum_count"/>
 
 	<EditText
-			android:id="@+id/minutes"
-			style="@style/AppTheme.NumberEditText.Inline"
-			android:hint="@string/hint_minutes"/>
+			android:id="@+id/edCount"
+			style="@style/AppTheme.NumberEditText.Inline"/>
 
 	<TextView
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-			android:text=":"/>
+			android:gravity="center_vertical"
+			android:text="@string/label_number_of_times"/>
 
-	<EditText
-			android:id="@+id/seconds"
-			style="@style/AppTheme.NumberEditText.Inline"
-			android:hint="@string/hint_seconds"/>
 </LinearLayout>
