Adds selectable bookmarks

--- a/random-ticker-base/src/main/res/layout/activity_klaxon.xml
+++ b/random-ticker-base/src/main/res/layout/activity_klaxon.xml
@@ -9,7 +9,7 @@
 			  android:layout_height="match_parent"
 			  android:background="@drawable/klaxon_background"
 			  android:orientation="vertical"
-			  tools:context="com.fanstaticapps.randomticker.activities.KlaxonActivity">
+			  tools:context="com.fanstaticapps.randomticker.ui.KlaxonActivity">
 
 
 	<com.airbnb.lottie.LottieAnimationView
