--- a/random-ticker-base/src/main/res/layout/activity_main.xml
+++ b/random-ticker-base/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
 		xmlns:tools="http://schemas.android.com/tools"
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
-		tools:context="com.fanstaticapps.randomticker.activities.MainActivity">
+		tools:context="com.fanstaticapps.randomticker.ui.MainActivity">
 
 	<include layout="@layout/app_bar"/>
 
